crates/svelte-parser/tests/simple/snapshots/snapshot__simple__success@expression_tag.svelte.snap
---
source: crates/svelte-parser/tests/simple/mod.rs
expression: root
input_file: crates/svelte-parser/tests/simple/inputs/expression_tag.svelte
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 3,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "ExpressionTag",
        "start": 0,
        "end": 3,
        "expression": {
          "type": "Literal",
          "start": 1,
          "end": 2,
          "value": 1.0,
          "raw": "1"
        }
      }
    ]
  },
  "module": null,
  "instance": null
}
