crates/svelte-parser/tests/simple/snapshots/snapshot__simple__success@script.svelte.snap
---
source: crates/svelte-parser/tests/simple/mod.rs
expression: root
input_file: crates/svelte-parser/tests/simple/inputs/script.svelte
---
{
  "type": "Root",
  "css": null,
  "start": 36,
  "end": 34,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "Text",
        "start": 34,
        "end": 36,
        "raw": "\n\n",
        "data": "\n\n"
      }
    ]
  },
  "module": {
    "type": "Script",
    "start": 0,
    "end": 34,
    "context": "module",
    "content": {
      "type": "Program",
      "start": 25,
      "end": 25,
      "sourceType": {
        "language": "javascript",
        "moduleKind": "module",
        "variant": "standard"
      },
      "hashbang": null,
      "directives": [],
      "body": []
    },
    "attributes": [
      {
        "type": "Attribute",
        "start": 8,
        "end": 24,
        "name": "context",
        "value": [
          {
            "type": "Text",
            "start": 17,
            "end": 23,
            "raw": "module",
            "data": "module"
          }
        ]
      }
    ]
  },
  "instance": {
    "type": "Script",
    "start": 36,
    "end": 53,
    "context": "default",
    "content": {
      "type": "Program",
      "start": 44,
      "end": 44,
      "sourceType": {
        "language": "javascript",
        "moduleKind": "module",
        "variant": "standard"
      },
      "hashbang": null,
      "directives": [],
      "body": []
    },
    "attributes": []
  }
}
