crates/svelte-parser/tests/simple/snapshots/snapshot__simple__test@comment.svelte.snap
---
source: crates/svelte-parser/tests/simple/mod.rs
expression: root
input_file: crates/svelte-parser/tests/simple/inputs/comment.svelte
---
{
  "type": "Root",
  "start": 0,
  "end": 18,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "Comment",
        "start": 0,
        "end": 7,
        "data": ""
      },
      {
        "type": "Comment",
        "start": 7,
        "end": 18,
        "data": "data"
      }
    ]
  }
}
