crates/svelte-parser/tests/simple/snapshots/snapshot__simple__test@text.svelte.snap
---
source: crates/svelte-parser/tests/simple/mod.rs
expression: root
input_file: crates/svelte-parser/tests/simple/inputs/text.svelte
---
{
  "type": "Root",
  "start": 0,
  "end": 8,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "Text",
        "start": 0,
        "end": 8,
        "raw": "text&lt;",
        "data": "text<"
      }
    ]
  },
  "module": null,
  "instance": null
}
